syntax = "proto3";

option java_multiple_files = true;
option java_package = "auth";

service AuthService {
  rpc GetLoggedInUser (GetLoggedInUserRequest) returns (GetLoggedInUserResponse);
}

message GetLoggedInUserRequest {}

message GetLoggedInUserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string createdAt = 4;
  string updatedAt = 5;
}